SERVER-81502 Support queue in lookup sub-pipeline When we parse the sub-pipeline for representative pipeline serialization, documents becomes a queue (followed by a few other stages). This change allows lookup to re-parse when its sub-pipeline starts with queue.